--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
     --txt-c-light: var(--c-light);
   
     /* font */
-    --font-main: 'Acrom', sans-serif;
+    --font-main: "Acrom", sans-serif;
   
     /* container width */
     --vertical-scroll: 20px;
@@ -65,7 +65,7 @@
   }
 
   body{
-    font-family: var (var(--font-main));
+    font-family: var(--font-main);
   }
   /*COMMON*/
   .accent-btn{
@@ -80,6 +80,7 @@
     padding: 20px 35px;
     border: none;
     outline: none;
+    cursor: pointer;
   }
 
   
@@ -418,6 +419,7 @@
 .team-projects .container {
   position: relative;
   overflow-x: hidden;
+  padding-bottom: 0;
 }
 
 .team-projects-title {
@@ -455,4 +457,47 @@
 
 .team-project-item:last-child {
   margin-bottom: 0;
+}
+
+/* cALLBACK FORM SECTION */
+.callback-form-container{
+  background: var(--c-dark);
+  padding: 35px 30px 40px 30px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.callback-form-title{
+
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--txt-c-light);
+  width: 260px;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 0 20px 0;
+}
+.callback-form-descr{
+  color: var(--txt-c-light);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 150%;
+  text-align: center;
+  width: 260px;
+  margin: 0 0 30px 0;
+}
+.callback-form-input{
+  background: transparent;
+  border: none;
+  outline: none;
+  padding: 10px 10px 15px 10px;
+  border-bottom: 1px solid var(--c-grey-blue);
+  text-align: center;
+  color: var(--c-grey-blue);
+  margin-bottom: 30px;
 }
