--- a/css/style.css
+++ b/css/style.css
@@ -501,3 +501,152 @@
   color: var(--c-grey-blue);
   margin-bottom: 30px;
 }
+
+/* CALLBACK FORM SECTION */
+
+.callback-form-container {
+  background: var(--c-dark);
+  padding: 35px 30px 40px 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.callback-form-title {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--txt-c-light);
+  width: 260px;
+  margin: 0 0 20px 0;
+}
+
+.callback-form-descr {
+  font-size: 17px;
+  line-height: 150%;
+  color: var(--txt-c-light);
+  width: 260px;
+  text-align: center;
+  margin: 0 0 30px 0;
+}
+
+.callback-form-input {
+  background: transparent;
+  border: none;
+  outline: none;
+  padding: 10px 10px 15px 10px;
+  border-bottom: 1px solid var(--c-grey-blue);
+  text-align: center;
+  color: var(--c-grey-blue);
+  margin-bottom: 30px;
+}
+
+/* CALCULATOR FORM SECTION */
+
+.calculator {
+  background: var(--c-dark);
+}
+
+.calculator-icon {
+  width: 195px;
+}
+
+.calculator-descr {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 150%;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--txt-c-light);
+  margin: 0 0 30px 0;
+}
+
+.calculator-descr span {
+  background: var(--c-accent);
+  padding: 5px;
+}
+
+.calculator-descr .calculator-descr-accent {
+  padding: 5px 10px;
+}
+
+.calculator-title {
+  width: 270px;
+  margin-bottom: 20px;
+}
+
+.calculator-text {
+  font-size: 17px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--txt-c-light);
+  margin: 20px 0 30px 0;
+}
+
+.calculator-form{
+  background-color: var(--c-light);
+  padding: 30px 25px;
+}
+.calculator-form-input{
+  display: flex;
+  flex-direction: column;
+  margin-bottom:  30px;
+}
+.callback-form-title{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 135%;
+  color: var(--txt-c-dark);
+  margin-bottom: 15px;
+}
+
+.calculator-form-select{
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid var(--c-grey-light);
+  padding: 5px 0 17px 0;
+}
+.calculator-form-input-radio-container{
+  display: flex;
+  align-items: center;
+}
+.calculator-form-input-label{
+  margin-right:  15px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 150%;
+  color: var(--c-dark);
+}
+
+.calculator-form-input-field{
+  margin-right: 10px;
+}
+.calculator-form-title{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 150%;
+  color: var(--txt-c-dark);
+}
+
+.calculate-form-total{
+  font-weight: bold;
+  font-size: 17px;
+  color: var(--txt-c-dark);
+  margin-bottom: 0;
+}
+.calculator-form-total-cost{
+
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 150%;
+  display: flex;
+  align-items: center;
+  color: var(--txt-c-dark);
+  margin: 0;
+}
