--- a/css/style.css
+++ b/css/style.css
@@ -653,3 +653,51 @@
   color: var(--txt-c-dark);
   margin: 0;
 }
+
+/*FOOTER SECTION*/
+.footer-my-name{
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--txt-c-dark);
+  margin: 0;
+}
+
+.footer-my-profesion{
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--txt-c-dark);
+  margin: 0 0 20px 0;
+}
+
+.footer-my-tel{
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--txt-c-dark);
+  text-decoration: none;
+  margin-bottom: 15px;
+}
+.footer-my-mail{
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--txt-c-dark);
+  text-decoration: none;
+  margin-bottom: 30px;
+}
+.social-links-item{
+  font-size: 25px;
+  margin-right: 35px;
+  text-decoration: none;
+  color: var(--c-dark);
+}
+.social-links-item:last-child{
+  margin-right: 0;
+
+}
