--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@
     --desktop: calc(900px + var(--vertical-scroll));
     --desktop-lg: calc(1146px + var(--vertical-scroll));
   
+    /* modals */
+
+    --modal-bgd-dark: rgba(20, 29, 45, 0.8);
+  
     /* animation */
     --animation-fast: 0.1s;
     --animation-slow: 0.3s;
@@ -62,6 +66,10 @@
           url('../fonts/acrom/Acrom-Regular.ttf') format('truetype');
       font-weight: normal;
       font-style: normal;
+  }
+
+  html {
+    scroll-behavior: smooth;
   }
 
   body{
@@ -108,177 +116,274 @@
   color: var(--txt-c-light);
 }
 
-  .front-page{
-    width: 320px;
-    background: var(--c-dark);
-    padding: 30px 10px 55px 10px;
-    box-sizing:  border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+ /*MODALS*/
 
-  .front-page-my-name {
-    font-weight: bold;
-    font-size: 26px;
-    line-height: 31px;
-    text-transform: uppercase;
-    color: var(--txt-c-accent);
-    text-align: center;
-    margin: 35px 0 10px 0;
-  }
+ .modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  pointer-events: none;
+  display: block;
+}
 
-  .front-page-profession {
-    font-weight: bold;
-    font-size: 35px;
-    line-height: 42px;
-    text-transform: uppercase;
-    text-align: center;
-    color: var(--txt-c-light);
-    margin-bottom: 20px;
-  }
+.modal-active {
+  opacity: 1;
+  pointer-events: all;
+}
 
-  .front-page-description {
-    font-size: 16px;
-    line-height: 150%;
-    text-align: center;
-    color: var(--txt-c-light);
-    margin-bottom: 20px;
-  }
+.modal-mobile-menu {
+  background: var(--c-light);
+}
 
-  .navigation {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
+.modal-mobile-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 100%;
+}
 
-  .navigation-part{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
+.mobile-menu-container  {
+  height: 70%;
+  justify-content: space-between;
+  margin: 0;
+}
 
-  .hire-me-btn {
-    font-weight: 800;
-    font-size: 15px;
-    line-height: 18px;
-    letter-spacing: 0.05em;
-    color: var(--txt-c-accent);
-    text-decoration: none;
-    margin: 0 20px 0 0;
-  }
+.modal-close-btn {
+  font-size: 18px;
+  position: absolute;
+  color: var(--c-grey-blue);
+  top: 16px;
+  right: 16px;
+  cursor: pointer;
+}
 
-  .mobile-menu {
-    width: 30px;
-    height: 30px;
-    background: var(--c-accent);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-  }
+/*MODALS - MOBILE MENU*/
 
-  .mobile-menu i {
-    color: var(--c-light);
-  }
-  
+.mobile-menu-close-btn {
+  background: var(--c-accent);
+  color: var(--c-light);
+  padding: 10px 14px;
+}
 
-  .front-page-gallery-btn {
-    margin-bottom: 40px;
-  }
-  
-  .front-page-my-photo {
-    width: 100px;
-    margin-bottom: 20px;
-  }
+.mobile-menu-items {
+  display: flex;
+  flex-direction: column;
+}
 
-  .front-page-my-decr {
-    font-weight: bold;
-    font-size: 15px;
-    line-height: 140%;
-    text-align: center;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    color: var(--txt-c-light);
-    margin: 0 0 15px 0;
-  }
+.mobile-menu-item  {
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 18px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: var(--txt-c-grey);
+  text-decoration: none;
+  text-align: center;
+  margin-bottom: 35px;
+}
 
-  .front-page-my-video-btn {
-    border: 2px solid var(--c-accent);
-    color: var(--txt-c-accent);
-    background: transparent;
-    padding: 10px 40px;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    margin-bottom: 35px;
-    display: flex;
-    align-items: center;
-  }
+.mobile-menu-my-tel {
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 150%;
+  text-align: center;
+  text-decoration: none;
+  color: var(--txt-c-dark);
+  margin-bottom: 15px;
+}
+.mobile-menu-my-mail {
+  font-size: 17px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--txt-c-dark);
+  text-decoration: none;
+  margin-bottom: 5px;
+}
 
-  .front-page-my-video-btn .fa-play {
-    font-size: 9px;
-    margin-right: 7px;
-  }
+.mobile-menu-contacts {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
 
-  .front-page-laptop {
-    width: 250px;
-    margin-bottom: 40px;
-  }
+/*MODALS - VIDEO*/
+
+.my-video-content {
+  width: 100%;
+}
+
+.my-video-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding: 20px 10px;
+}
+
+.my-video-close-btn {
+  background: var(--c-light);
+  color: var(--c-dark);
+  padding: 10px 14px;
+}
+
+/*FRONT-PAGE*/
+.front-page{
+  width: 320px;
+  background: var(--c-dark);
+  padding: 30px 10px 55px 10px;
+  box-sizing:  border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.front-page-my-name {
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 31px;
+  text-transform: uppercase;
+  color: var(--txt-c-accent);
+  text-align: center;
+  margin: 35px 0 10px 0;
+}
+.front-page-profession {
+  font-weight: bold;
+  font-size: 35px;
+  line-height: 42px;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--txt-c-light);
+  margin-bottom: 20px;
+}
+.front-page-description {
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--txt-c-light);
+  margin-bottom: 20px;
+}
+.navigation {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.navigation-part{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.hire-me-btn {
+  font-weight: 800;
+  font-size: 15px;
+  line-height: 18px;
+  letter-spacing: 0.05em;
+  color: var(--txt-c-accent);
+  text-decoration: none;
+  margin: 0 20px 0 0;
+}
+.mobile-menu {
+  width: 30px;
+  height: 30px;
+  background: var(--c-accent);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+.mobile-menu i {
+  color: var(--c-light);
+}
+
+.front-page-gallery-btn {
+  margin-bottom: 40px;
+}
+
+.front-page-my-photo {
+  width: 100px;
+  margin-bottom: 20px;
+}
+.front-page-my-decr {
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 140%;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: var(--txt-c-light);
+  margin: 0 0 15px 0;
+}
+.front-page-my-video-btn {
+  border: 2px solid var(--c-accent);
+  color: var(--txt-c-accent);
+  background: transparent;
+  padding: 10px 40px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  margin-bottom: 35px;
+  display: flex;
+  align-items: center;
+}
+.front-page-my-video-btn .fa-play {
+  font-size: 9px;
+  margin-right: 7px;
+}
+.front-page-laptop {
+  width: 250px;
+  margin-bottom: 40px;
+}
 
   /* EXPERIENCE */
 
-  .experience-title {
-    width: 240px;
-    font-weight: bold;
-    font-size: 15px;
-    line-height: 140%;
-    text-align: center;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    color: var(--txt-c-light);
-    margin: 0 0 30px 0;
-  }
-
-  .experience-skill {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    margin-left: 28px;
-    
-  }
-
-  .experience-dots {
-    display: flex;
-    align-items: center;
-    margin-right: 10px;
-  }
-
-  .experience-dots-item {
-    color: var(--c-grey-blue);
-    font-size: 8px;
-    margin-right: 5px;
-  }
-
-  .experience-dots-item-accent {
-    color: var(--c-accent);
-  }
-
-  .experience-text {
-    color: var(--txt-c-light);
-    margin: 0;
-    font-size: 16px;
-    line-height: 19px;
-  }
-
-  .experience-container {
-    display: flex;
-    flex-direction: column;
-  }
+.experience-title {
+  width: 240px;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 140%;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: var(--txt-c-light);
+  margin: 0 0 30px 0;
+}
+.experience-skill {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-left: 28px;
+  
+}
+.experience-dots {
+  display: flex;
+  align-items: center;
+  margin-right: 10px;
+}
+.experience-dots-item {
+  color: var(--c-grey-blue);
+  font-size: 8px;
+  margin-right: 5px;
+}
+.experience-dots-item-accent {
+  color: var(--c-accent);
+}
+.experience-text {
+  color: var(--txt-c-light);
+  margin: 0;
+  font-size: 16px;
+  line-height: 19px;
+}
+.experience-container {
+  display: flex;
+  flex-direction: column;
+}
 
   /* ABOUT PAGE */
 
