--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,10 @@
   cursor: pointer;
 }
 
+.body-scroll-disable{
+  overflow: hidden;
+}
+
 /*MODALS - MOBILE MENU*/
 
 .mobile-menu-close-btn {
@@ -209,6 +213,8 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+  flex-direction: column;
+  align-items: center;
 }
 
 /*MODALS - VIDEO*/
