--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,57 @@
   color: var(--c-dark);
   padding: 10px 14px;
 }
+/*MODALS - REQUEST-RECEIVED*/
+.request-received-title{
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  color: var(--txt-c-accent);
+  margin-top: 0;
+}
+
+.request-received-primery-msg{
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 43px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--txt-c-grey);
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+
+.request-received-secondary-msg{
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 25px;
+  text-align: center;
+  color: var(--txt-c-dark);
+  width: 185px;
+  margin: 0;
+  
+}
+
+.request-received-container{
+  background: var(--c-light);
+  padding: 80px 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.modal-request-received{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  box-sizing: border-box;
+}
 
 /*FRONT-PAGE*/
 .front-page{
